# dragen

./: .ghci  .gitignore  LICENSE  README.md  dragen.cabal  dragen.cabal.old  package.yaml  stack.yaml
src/: Arbitrary.hs  Countable.hs  DeriveArbitrary.hs  Dragen.hs  Megadeth.hs  Optimization.hs  Prediction.hs  Reification.hs  TypeInfo.hs
test/: Countable.hs  Examples.hs  Examples.hs.output  Main.hs  RE.hs  TestCountable.hs  TestDefs.hs
