name:               dragen
version:            0.1.0.0
synopsis:           Derivation of RAndom GENerators
license:            BSD3
license-file:       LICENSE
category:           Testing
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  hs-source-dirs:   src 
  exposed-modules:
                    Countable
                    Dragen
                    TypeInfo
                    Reification
                    Prediction
                    Optimization
                    Arbitrary                   
                    Megadeth

  default-language: Haskell2010
  ghc-options: -O2 -optc-O3 -ddump-splices

  build-depends:
                    base >= 4.7 && < 5
                  , transformers
                  , QuickCheck
                  , template-haskell
                  , containers
                  , extra
                  , ghc-prim
                  , split
                  , matrix
